[gd_scene load_steps=8 format=3 uid="uid://ro82b48ln0gj"]

[ext_resource type="Script" path="res://pages/game/game.gd" id="1_cq41v"]
[ext_resource type="PackedScene" uid="uid://b5w5ac45k5g5s" path="res://engine/level_manager.tscn" id="2_dbxag"]
[ext_resource type="PackedScene" uid="uid://c2pluv27fc2bv" path="res://engine/bg/bg.tscn" id="2_drtex"]
[ext_resource type="PackedScene" uid="uid://cac2mip8v8fdu" path="res://pages/game/minimaps.tscn" id="5_bs0oa"]
[ext_resource type="PackedScene" uid="uid://cl0yelhxpgf2k" path="res://engine/editor_events.tscn" id="5_mko5n"]
[ext_resource type="PackedScene" uid="uid://e6aydemh5yb1" path="res://engine/penciler/penciler.tscn" id="6_x1v3o"]
[ext_resource type="PackedScene" uid="uid://cwi7db32xkv2g" path="res://engine/player_manager.tscn" id="7_abcde"]

[node name="Game" type="Node2D"]
script = ExtResource("1_cq41v")

[node name="BG" parent="." instance=ExtResource("2_drtex")]

[node name="LevelManager" parent="." instance=ExtResource("2_dbxag")]

[node name="PlayerManager" parent="." instance=ExtResource("7_abcde")]

[node name="EditorEvents" parent="." instance=ExtResource("5_mko5n")]

[node name="Penciler" parent="." instance=ExtResource("6_x1v3o")]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
layer = 120

[node name="BackgroundPanel" type="Panel" parent="UI"]
offset_left = -4.0
offset_top = -1.0
offset_right = 1996.0
offset_bottom = 234.0

[node name="BackButton" type="Button" parent="UI"]
offset_left = 20.0
offset_top = 251.0
offset_right = 219.0
offset_bottom = 322.0
text = "Back"

[node name="Minimaps" parent="UI" instance=ExtResource("5_bs0oa")]
